# binhcobol

./: Cargo.toml  README.md
crates/cobol_lexer/: Cargo.toml
crates/cobol_lexer/src/: cursor.rs  lib.rs  tests.rs
crates/cobol_parser/: Cargo.toml
crates/cobol_parser/src/: edition.rs  event.rs  grammar.rs  input.rs  lexed_str.rs  lib.rs  output.rs  parser.rs  shortcuts.rs  syntax_kind.rs  tests.rs  token_set.rs
crates/cobol_parser/src/grammar/: items.rs
crates/cobol_parser/src/syntax_kind/: generated.rs
crates/cobol_parser/src/tests/: sourcegen_inline_tests.rs  top_entries.rs
crates/cobol_parser/test_data/lexer/ok/: reference_format.cbl  reference_format.rast
crates/sourcegen/: Cargo.toml
crates/stdx/: Cargo.toml
crates/stdx/src/: lib.rs
xtask/: Cargo.toml
